# TaskControl

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: delpoyment.yml  deployment.yml
alembic/: env.py
alembic/versions/: 2024_02_13_1806-daa258197794_create_tables.py  2024_02_15_1421-03f054121702_create_tables.py  2024_02_16_1251-f91306c5b01e_create_tables.py
app/: config.py  main.py
app/api_v1/: __init__.py
app/api_v1/parties/: models.py  repository.py  routers.py  schemas.py  services.py  utils.py
app/api_v1/products/: models.py  repository.py  routers.py  schemas.py  services.py
app/api_v1/repositories/: base_repository.py
app/db/: database.py
docker_script/: app.sh
docs/: technical_specification.md
tests/: conftest.py  test_data.py
tests/party/: test_party.py
tests/product/: conftest.py  test_product.py
