[tool.poetry]
name = "taskcontrol"
version = "0.1.0"
description = ""
authors = ["Никита Швейцер <shveitcer2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.8.0"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
flake8 = "^7.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
flake8-bugbear = "^24.2.6"
flake8-builtins = "^2.2.0"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
flake8-pyproject = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
